feat(linreg): add methods to calculate gradients and moments to linreg class

--- a/adam-linreg.ipynb
+++ b/adam-linreg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ea2e7c2d-9193-441a-8ce8-3ffd894f5f4f",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "c1663d6e-5869-4ef8-a1ad-817a9945bfb1",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "46358c0b-83ef-43c8-b1e6-7b053e784b70",
    "metadata": {},
    "outputs": [],
@@ -36,23 +36,40 @@
     "        self.decay_rates = decay_rates\n",
     "        self.epsilon = 10**(-8)\n",
     "        \n",
+    "        self.m_moment = np.array([], dtype=float)\n",
+    "        self.v_moment = np.array([], dtype=float)\n",
+    "        \n",
     "        self.losses = np.array([], dtype=float)\n",
     "    \n",
     "    def init_weights(self, n_features:int) -> None:\n",
     "        self.weights = np.zeros(n_features, dtype=float)\n",
-    "        self.bias = 0\n",
     "        \n",
-    "    def calculate_grads(self):\n",
+    "    def calculate_grads(self, x:list[float], y:float, target:float) -> list[float]:\n",
+    "        return [2 * (y - target) * x[i] for i in range(len(x))]\n",
+    "    \n",
+    "    def calculate_moments(self, grads:list[float], n_iter:int) -> tuple[float]:\n",
+    "        m = self.decay_rates[0] * self.m_moment[-1] + (1 - self.decay_rates[0]) * grads\n",
+    "        v = self.decay_rates[1] * self.v_moment[-1] + (1 - self.decay_rates[1]) * grads**2\n",
+    "        \n",
+    "        self.m_moment = np.append(self.m_moment, m)\n",
+    "        self.v_moment = np.append(self.v_moment, v)\n",
+    "        \n",
+    "        corrected_m = m / (1 - self.decay_rates[0]**n_iter) \n",
+    "        corrected_v = v / (1 - self.decay_rates[1]**n_iter)\n",
+    "        \n",
+    "        return corrected_m, corrected_v\n",
+    "    \n",
+    "    def train(self, X, y) -> None:\n",
     "        pass\n",
     "    \n",
-    "    def calculate_moments(self):\n",
+    "    def predict(self, X) -> np.ndarray:\n",
     "        pass"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0defcd1c-346d-4f66-a4d8-69693c1a7e3c",
+   "id": "ddd5ceae-0c2d-4c73-8c90-c05f5bcf3131",
    "metadata": {},
    "outputs": [],
    "source": []
