feat(linreg): implement train and predict methods in model class

--- a/adam-linreg.ipynb
+++ b/adam-linreg.ipynb
@@ -47,7 +47,9 @@
     "    def calculate_grads(self, x:list[float], y:float, target:float) -> list[float]:\n",
     "        return [2 * (y - target) * x[i] for i in range(len(x))]\n",
     "    \n",
-    "    def calculate_moments(self, grads:list[float], n_iter:int) -> tuple[float]:\n",
+    "    def calculate_moments(self, x:list[float], y:float, target:float, n_iter:int) -> tuple[float]:\n",
+    "        grads = calculate_grads(x, y, target)\n",
+    "        \n",
     "        m = self.decay_rates[0] * self.m_moment[-1] + (1 - self.decay_rates[0]) * grads\n",
     "        v = self.decay_rates[1] * self.v_moment[-1] + (1 - self.decay_rates[1]) * grads**2\n",
     "        \n",
@@ -59,11 +61,22 @@
     "        \n",
     "        return corrected_m, corrected_v\n",
     "    \n",
-    "    def train(self, X, y) -> None:\n",
-    "        pass\n",
+    "    def train(self, X:np.ndarray, y:np.ndarray) -> None:\n",
+    "        self.init_weights(X.shape[1])\n",
+    "        \n",
+    "        for epoch in range(100):\n",
+    "            for i in range(X.shape[0]):\n",
+    "                pred = self.predict(X[i])\n",
+    "                loss = (y[i] - pred)**2\n",
+    "\n",
+    "                self.losses = np.append(self.losses, loss)\n",
+    "\n",
+    "                m, v = self.calculate_moments(X[i], pred, y[i], i)\n",
+    "                self.weights -= self.learning_rate * m / (sqrt(v) + self.epsilon)\n",
+    "            \n",
     "    \n",
     "    def predict(self, X) -> np.ndarray:\n",
-    "        pass"
+    "        return np.dot()"
    ]
   },
   {
